--- a/Game/MagicGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Game/MagicGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -270,8 +270,7 @@ WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedI
 LastLevel=/Game/VRTemplate/Maps/VRTemplateMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
+CleanShutdown=False
 
 [DetailCategories]
 GeneralProjectSettings.About=True
