--- a/Game/MagicGame/MagicGame.uproject
+++ b/Game/MagicGame/MagicGame.uproject
@@ -17,6 +17,11 @@
 				"Android",
 				"HoloLens"
 			]
+		},
+		{
+			"Name": "AutoSizeComments",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/ae89a2c4ab384de0a3f213b23de324f3"
 		}
 	],
 	"TargetPlatforms": [
