--- a/Game/MagicGame/Config/DefaultEngine.ini
+++ b/Game/MagicGame/Config/DefaultEngine.ini
@@ -360,6 +360,7 @@ bAllowClientSideNavigation=True
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_VirtualRealityBP",NewGameName="/Script/MagicGame")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_VirtualRealityBP",NewGameName="/Script/MagicGame")
+MaximumLoopIterationCount=1000000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
