--- a/Game/MagicGame/MagicGame.uproject
+++ b/Game/MagicGame/MagicGame.uproject
@@ -1,4 +1,3 @@
-{
 	"FileVersion": 3,
 	"EngineAssociation": "5.1",
 	"Category": "",
@@ -22,6 +21,11 @@
 			"Name": "AutoSizeComments",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/ae89a2c4ab384de0a3f213b23de324f3"
+		},
+		{
+			"Name": "LowEntryExtStdLib",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/846c2ad08f164f45b0335ecebf85361e"
 		}
 	],
 	"TargetPlatforms": [
