some small level design ig

--- a/Game/MagicGame/Config/DefaultEngine.ini
+++ b/Game/MagicGame/Config/DefaultEngine.ini
@@ -399,3 +399,6 @@ DefaultInteractiveFramerate=10.000000
 DefaultInteractiveFramerateWaitTime=600.000000
 DefaultInteractiveFramerateDuration=5.000000
 
+[/Script/Engine.PhysicsSettings]
+bSubstepping=True
+
