--- a/Game/MagicGame/Config/DefaultEngine.ini
+++ b/Game/MagicGame/Config/DefaultEngine.ini
@@ -403,3 +403,6 @@ DefaultInteractiveFramerateDuration=5.000000
 [/Script/Engine.PhysicsSettings]
 bSubstepping=True
 
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
