--- a/Game/MagicGame/Config/DefaultEngine.ini
+++ b/Game/MagicGame/Config/DefaultEngine.ini
@@ -128,7 +128,7 @@ DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap
+EditorStartupMap=/Game/Levels/Level1.Level1
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
