--- a/Game/MagicGame/MagicGame.uproject
+++ b/Game/MagicGame/MagicGame.uproject
@@ -17,6 +17,11 @@
 				"Android",
 				"HoloLens"
 			]
+		},
+		{
+			"Name": "LowEntryExtStdLib",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/846c2ad08f164f45b0335ecebf85361e"
 		}
 	],
 	"TargetPlatforms": [
